objects/LLC_BI__Application__c.object
<CustomObject>
    <description>The Application object is used to capture entry details about a relationship&apos;s business (loans and deposits) with the financial institution. The object is primarily used in the nCino SBA Package.</description>
    <fields>
        <fullName>Default_App__c</fullName>
        <defaultValue>&apos;llc-bi--application.llc-bi--application-details&apos;</defaultValue>
        <label>Default App</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Application_Completion_Date__c</fullName>
        <description>Application Completed Date is a user input field that captures the date at which an application is considered complete.</description>
        <label>Application Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Offer_Sorting_Preference__c</fullName>
        <description>The user populates this optional picklist field to save the borrower’s offer sorting preference. By default, it will include lowest rate and lowest payment.</description>
        <inlineHelpText>Use this field to save the borrower’s offer sorting preference.</inlineHelpText>
        <label>Offer Sorting Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lowest Rate</fullName>
                </value>
                <value>
                    <fullName>Lowest Payment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Online_Application__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is checked when the application is created online.</inlineHelpText>
        <label>Online Application</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nPortal__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account associated to the application</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nPortal__Applicant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User submitting the application</description>
        <label>Applicant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nPortal__Artifact_Id__c</fullName>
        <description>This String holds the Id of the type of application which is getting created (i.e. Loan, Deposit, Treasury)</description>
        <inlineHelpText>This ID should match the artifact being created by the application</inlineHelpText>
        <label>Artifact Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nPortal__Business_Credit_Transaction_Log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system automatically populates this lookup field to display a business&apos; credit report transaction log generated from a business credit pull</description>
        <inlineHelpText>The system automatically populates the transaction log generated by a business credit report.</inlineHelpText>
        <label>Business Credit Transaction Log</label>
        <referenceTo>nFUSE__Transaction_Log__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nPortal__OA_Auto_Decision_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox field is automatically selected when auto decision is complete.</description>
        <label>OA Auto Decision Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nPortal__Product_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is a lookup to the product package associated to the artifact (such as a loan or deposit) being created by this application.</description>
        <label>Product Package</label>
        <referenceTo>LLC_BI__Product_Package__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nPortal__Product__c</fullName>
        <description>The ID of the Product or Product type for the online application</description>
        <label>Product</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nPortal__Session__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>--DEPRECATED-- The Session saved for the Application. This field has been moved to a junction object called Context which maps applications to Users and Sessions along with a particular Context Type name.</description>
        <label>-D Session</label>
        <referenceTo>nFORCE__Session__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nPortal__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Declined / Incomplete</fullName>
                </value>
                <value>
                    <fullName>In-Progress</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nSBA__ARC_Loan_Meets_All_Criteria__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The ARC Loan being submitted meets all Americas Recovery Capital (ARC) program criteria? Answer only for ARC loans.</description>
        <inlineHelpText>The ARC Loan being submitted meets all Americas Recovery Capital (ARC) program criteria? Answer only for ARC loans.</inlineHelpText>
        <label>ARC Loan Meets All Criteria</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Affiliated_Biz_Defaulted_On_Fed_Loan__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Another business owned or controlled by any Associate of the Small Business Applicant or guarantor defaulted on a Federal loan (or guaranteed a loan which was defaulted) and caused the Federal government, or any of its agencies, or departments to sustain a loss in any of its programs, including any compromise agreement with any such agency/department.</description>
        <inlineHelpText>Another business owned or controlled by any Associate of the Small Business Applicant or guarantor defaulted on a Federal loan (or guaranteed a loan which was defaulted) and caused the Federal government.</inlineHelpText>
        <label>Affiliated Biz Defaulted On Fed Loan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Agg_Amt_SBA_Loans_To_EPC_OC_Under_Limit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The aggregate amount of the SBA portions for this application and for all outstanding loans to the EPC, the OC, and their affiliates does not exceed $3,750,000 ($4,500,000 until 12/31/10).</description>
        <inlineHelpText>Aggregate Amount SBA Loans To EPC And OC Under Limit</inlineHelpText>
        <label>Agg Amt SBA Loans To EPC OC Under Limit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__All_Associates_USVerified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>All Associates are US Citizens or Verified</description>
        <inlineHelpText>All Associates are US Citizens or Verified</inlineHelpText>
        <label>All are US Citizens or Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__All_Associates_US_Citizens_Or_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>All Associates of the business are either U.S. citizens or non-U.S. citizens whose status has been verified with USCIS or SBA.</description>
        <inlineHelpText>All Associates of the business are either U.S. citizens or non-U.S. citizens whose status has been verified with USCIS or SBA.</inlineHelpText>
        <label>All Associates US Citizens Or Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__All_Owners_Of_20_Percent_Will_Guaranty__c</fullName>
        <defaultValue>false</defaultValue>
        <description>All owners of 20 percent or more of the Applicant (including a spouse owning 5 percent or more when the combined ownership of both spouses is 20 percent or more) will guaranty the loan (except for ESOPs or eligible 401(k)Trusts).</description>
        <inlineHelpText>All owners of 20 percent or more of the Applicant (including a spouse owning 5 percent or more when the combined ownership of both spouses is 20 percent or more) will guaranty the loan (except for ESOPs or eligible 401(k)Trusts).</inlineHelpText>
        <label>All_Owners Of 20 Percent Will Guaranty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Any_Individual_On_Parole_Or_Probation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is any of individuals on parole or probation</description>
        <inlineHelpText>Is any of individuals on parole or probation</inlineHelpText>
        <label>Any Individual On Parole Or Probation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Any_Yes_on_Q2_or_Q3_of_Form_1919__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Any YESes on Q2 or Q3 of Form 1919</description>
        <inlineHelpText>Any YESes on Q2 or Q3 of Form 1919</inlineHelpText>
        <label>Any Yes on Q2 or Q3 of Form 1919</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Application_Eligible_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Application Eligible Indicator</description>
        <inlineHelpText>Application Eligible Indicator</inlineHelpText>
        <label>Application Eligible Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Application_Number__c</fullName>
        <description>Application Number assigned by the lender.</description>
        <inlineHelpText>Application Number assigned by the lender.</inlineHelpText>
        <label>Application Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Are_Ceiling_And_Floor_Rates_Variable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether ceiling and floor rates on the loan are variable. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Indicates whether ceiling and floor rates on the loan are variable. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Are Ceiling And Floor Rates Variable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Associate_Curr_Deliquent_On_Fed_Loan__c</fullName>
        <defaultValue>false</defaultValue>
        <description>An Associate of the Small Business Applicant or guarantor is currently delinquent on any Federal debt.</description>
        <inlineHelpText>An Associate of the Small Business Applicant or guarantor is currently delinquent on any Federal debt.</inlineHelpText>
        <label>Associate Curr Deliquent On Fed Loan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Biz_Acquisition_Buyer_Injection__c</fullName>
        <description>Form 1920 - Page 5 - Business Acquisition - Buyer Injection</description>
        <inlineHelpText>Form 1920 - Page 5 - Business Acquisition - Buyer Injection</inlineHelpText>
        <label>Biz Acquisition Buyer Injection</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Biz_Acquisition_Commercial_Real_Estate__c</fullName>
        <description>Form 1920 - Page 5 - Business Acquisition - Commercial Real Estate</description>
        <inlineHelpText>Form 1920 - Page 5 - Business Acquisition - Commercial Real Estate</inlineHelpText>
        <label>Biz Acquisition Commercial Real Estate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Biz_Acquisition_Down_Payment_To_Seller__c</fullName>
        <description>Form 1920 - Page 5 - Business Acquisition - Down Payment To Seller</description>
        <inlineHelpText>Form 1920 - Page 5 - Business Acquisition - Down Payment To Seller</inlineHelpText>
        <label>Biz Acquisition Down Payment To Seller</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Biz_Acquisition_Equipment__c</fullName>
        <description>Form 1920 - Page 5 - Business Acquisition - Equipment</description>
        <inlineHelpText>Form 1920 - Page 5 - Business Acquisition - Equipment</inlineHelpText>
        <label>Biz Acquisition Equipment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Biz_Acquisition_Injection_Source_Type__c</fullName>
        <description>Business Acquisition Source and Type of Injection</description>
        <inlineHelpText>Business Acquisition Source and Type of Injection.</inlineHelpText>
        <label>Biz Acquisition Injection Source &amp; Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Biz_Acquisition_Intangible_Assets__c</fullName>
        <description>Form 1920 - Page 5 - Business Acquisition - Intangible Assets</description>
        <inlineHelpText>Form 1920 - Page 5 - Business Acquisition - Intangible Assets</inlineHelpText>
        <label>Biz Acquisition Intangible Assets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Biz_Acquisition_Total_Amount_Financed__c</fullName>
        <description>Form 1920 - Page 5 - Business Acquisition - Total Amount Financed</description>
        <inlineHelpText>Form 1920 - Page 5 - Business Acquisition - Total Amount Financed</inlineHelpText>
        <label>Biz Acquisition Total Amount Financed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Borrower_And_OC_Documents_Open_Options__c</fullName>
        <description>List all Borrower And Operating Company Documents Open Options here. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>List all Borrower And Operating Company Documents Open Options here. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Borrower And OC Documents Open Options</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nSBA__Borrower_Inject_Leasehold_Improvements__c</fullName>
        <description>Form 1920 - Page 2 - Use of Proceeds - Leasehold Improvements - Borrower Injection (in thousands)</description>
        <inlineHelpText>Form 1920 - Page 2 - Use of Proceeds - Leasehold Improvements - Borrower Injection (in thousands)</inlineHelpText>
        <label>Borrower Inject. Leasehold Improvements</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Borrower_Injection_Acquire_Business__c</fullName>
        <description>Form 1920 - Page 2 - Use of Proceeds - Acquire Business - Borrower Injection (in thousands)</description>
        <inlineHelpText>Form 1920 - Page 2 - Use of Proceeds - Acquire Business - Borrower Injection (in thousands)</inlineHelpText>
        <label>Borrower Injection Acquire Business</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Borrower_Injection_Construction__c</fullName>
        <description>Form 1920 - Page 2 - Use of Proceeds - Construction - Borrower Injection (in thousands)</description>
        <inlineHelpText>Form 1920 - Page 2 - Use of Proceeds - Construction - Borrower Injection (in thousands)</inlineHelpText>
        <label>Borrower Injection Construction</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Borrower_Injection_Furniture_Fixtures__c</fullName>
        <description>Form 1920 - Page 2 - Use of Proceeds - Furniture and Fixtures - Borrower Injection (in thousands)</description>
        <inlineHelpText>Form 1920 - Page 2 - Use of Proceeds - Furniture and Fixtures - Borrower Injection (in thousands)</inlineHelpText>
        <label>Borrower Injection Furniture Fixtures</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Borrower_Injection_Machinery_Equipment__c</fullName>
        <description>Form 1920 - Page 2 - Use of Proceeds - Machinery and Equipment - Borrower Injection (in thousands)</description>
        <inlineHelpText>Form 1920 - Page 2 - Use of Proceeds - Machinery and Equipment - Borrower Injection (in thousands)</inlineHelpText>
        <label>Borrower Injection Machinery Equipment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Borrower_Injection_Other2__c</fullName>
        <description>Form 1920 - Page 2 - Use of Proceeds - Other2 - Borrower Injection (in thousands)</description>
        <inlineHelpText>Form 1920 - Page 2 - Use of Proceeds - Other2 - Borrower Injection (in thousands)</inlineHelpText>
        <label>Borrower Injection Other2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Borrower_Injection_Other__c</fullName>
        <description>Form 1920 - Page 2 - Use of Proceeds - Other - Borrower Injection (in thousands)</description>
        <inlineHelpText>Form 1920 - Page 2 - Use of Proceeds - Other - Borrower Injection (in thousands)</inlineHelpText>
        <label>Borrower Injection Other</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Borrower_Injection_Pay_Accounts_Payable__c</fullName>
        <description>Form 1920 - Page 2 - Use of Proceeds - Pay Accounts Payable - Borrower Injection (in thousands)</description>
        <inlineHelpText>Form 1920 - Page 2 - Use of Proceeds - Pay Accounts Payable - Borrower Injection (in thousands)</inlineHelpText>
        <label>Borrower Injection Pay Accounts Payable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Borrower_Injection_Pay_Notes_Payable__c</fullName>
        <description>Form 1920 - Page 2 - Use of Proceeds - Pay Notes Payable - Borrower_Injection (in thousands)</description>
        <inlineHelpText>Form 1920 - Page 2 - Use of Proceeds - Pay Notes Payable - Borrower_Injection (in thousands)</inlineHelpText>
        <label>Borrower_Injection Pay Notes Payable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Borrower_Injection_Pay_Off_SBA_Loan__c</fullName>
        <description>Form 1920 - Page 2 - Use of Proceeds - Pay Off SBA Loan - Borrower Injection (in thousands)</description>
        <inlineHelpText>Form 1920 - Page 2 - Use of Proceeds - Pay Off SBA Loan - Borrower Injection (in thousands)</inlineHelpText>
        <label>Borrower Injection Pay Off SBA Loan</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Borrower_Injection_Purchase_Inventory__c</fullName>
        <description>Form 1920 - Page 2 - Use of Proceeds - Purchase Inventory - Borrower Injection (in thousands)</description>
        <inlineHelpText>Form 1920 - Page 2 - Use of Proceeds - Purchase Inventory - Borrower Injection (in thousands)</inlineHelpText>
        <label>Borrower Injection Purchase Inventory</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Borrower_Injection_Purchase_Land__c</fullName>
        <description>Form 1920 - Page 2 - Use of Proceeds - Purchase Land - Borrower Injection (in thousands)</description>
        <inlineHelpText>Form 1920 - Page 2 - Use of Proceeds - Purchase Land - Borrower Injection (in thousands)</inlineHelpText>
        <label>Borrower Injection Purchase Land</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Borrower_Injection_SBA_Guaranty_Fee__c</fullName>
        <description>Form 1920 - Page 2 - Use of Proceeds - SBA Guaranty Fee - Borrower Injection (in thousands)</description>
        <inlineHelpText>Form 1920 - Page 2 - Use of Proceeds - SBA Guaranty Fee - Borrower Injection (in thousands)</inlineHelpText>
        <label>Borrower Injection SBA Guaranty Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Borrower_Injection_Total__c</fullName>
        <description>Form 1920 - Page 2 - Use of Proceeds - Total - Borrower Injection (in thousands)</description>
        <inlineHelpText>Form 1920 - Page 2 - Use of Proceeds - Total - Borrower Injection (in thousands)</inlineHelpText>
        <label>Borrower Injection Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Borrower_Injection_Working_Capital__c</fullName>
        <description>Form 1920 - Page 2 - Use of Proceeds - Working Capital - Borrower Injection (in thousands)</description>
        <inlineHelpText>Form 1920 - Page 2 - Use of Proceeds - Working Capital - Borrower Injection (in thousands)</inlineHelpText>
        <label>Borrower Injection Working Capital</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Broker_Services_Charged_To_Applicant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Broker or referral services for this loan were charged to the applicant</description>
        <label>Broker Services Charged To Applicant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Builders_CAPLines_Applicant_Qualifies_7__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Builders CAPLines: Applicant qualifies under standard 7(a), is a construction contractor or homebuilder under NAICS codes 236220, 236115, 236116, or 236118 with a demonstrated managerial and technical ability in profitable construction or renovation, will either perform the construction/renovation work or manage the job with at least one supervisory employee on the job site during the entire construction phase, will conduct prompt and significant renovations (as defined in SOP 50 10 5(F), Subpart B, Chapter 2, Paragraph III.M.3.c)), has demonstrated a successful performance record in bidding and completing construction/renovation at a profit within the estimated construction period, is able to demonstrate prior prompt payments to suppliers and subcontractors, and the prior successful performance have been of comparable type and size to the proposed project.</description>
        <inlineHelpText>Builders CAPLines Applicant Qualifies Under Standard 7a</inlineHelpText>
        <label>Builders CAPLines App Qualifies 7a</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Building_With_Improvements_Owned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The building where improvements will be made is owned by any principals of the Operating Company.</description>
        <inlineHelpText>The building where improvements will be made is owned by any principals of the Operating Company.</inlineHelpText>
        <label>Building With Improvements Owned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Bus_Value_Req_For_Loans_Mor_250k_Int_Met__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The amount being financed (including any 7(a), 504, seller or other financing) minus the separately appraised value of real estate and/or equipment is more than $250,000 OR there is a close relationship between the buyer and the seller. The lender has obtained an independent business valuation from a qualified source.</description>
        <inlineHelpText>Business Valuation Requirements For Loans With Intangible Assets More Than 250000 Were Met</inlineHelpText>
        <label>Bus Val Req Met For Loan More Than 250k</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Bus_Value_Req_For_Loans_Sub_250k_Int_Met__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The amount being financed (including any 7(a), 504, seller, or other financing) minus the separately appraised value of real estate and/or equipment being financed is $250,000 or less. The valuation of the business is supported by at least a lender’s valuation. If the valuation analysis is performed by the lender’s loan officer, a synopsis is attached.</description>
        <inlineHelpText>Business Valuation Requirements For Loans With Intangible Assets 250000 Or Less Were Met</inlineHelpText>
        <label>Bus Val Req Met For Loan Less Than 250k</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Business_Acquisition_Asset__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Form 1920 - Page 2 - Use of Proceeds - Business Acquisition  - Asset Purchase Indicator (in thousands)</description>
        <inlineHelpText>Form 1920 - Page 2 - Use of Proceeds - Business Acquisition  - Asset Purchase Indicator (in thousands)</inlineHelpText>
        <label>Business Acquisition  - Asset Purchase</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Business_Acquisition_Stock__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Form 1920 - Page 2 - Use of Proceeds - Business Acquisition  - Stock Purchase Indicator (in thousands)</description>
        <inlineHelpText>Form 1920 - Page 2 - Use of Proceeds - Business Acquisition  - Stock Purchase Indicator (in thousands)</inlineHelpText>
        <label>Business Acquisition  - Stock Purchase</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__CAIP_Loan_Is_PLP_Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Community Adjustment and Investment Program (CAIP) loan eligible to be processed under the PLP lender&apos;s delegated authority? Answer only for CAIP loans.</description>
        <inlineHelpText>Community Adjustment and Investment Program (CAIP) loan eligible to be processed under the PLP lender&apos;s delegated authority? Answer only for CAIP loans.</inlineHelpText>
        <label>CAIP Loan Is PLP Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__CA_Pilot_Program_Timely_Payments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The loan is being processed under the CA Pilot Program and the lender has provided a transcript showing due dates and 6 months of timely payments for the most recent six-month period.</description>
        <inlineHelpText>The loan is being processed under the CA Pilot Program and the lender has provided a transcript showing due dates and 6 months of timely payments for the most recent six-month period.</inlineHelpText>
        <label>CA Pilot Program Timely Payments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__CA_Residential_Collateral_County_List__c</fullName>
        <description>List of all California Counties where pledged collateral is located. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>List of all California Counties where pledged collateral is located. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>CA Residential Collateral County List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Certs_And_Agreements_Open_Options_1__c</fullName>
        <description>Certifications and Agreements Open Options - prior to disbursement section. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Certifications and Agreements Open Options - prior to disbursement section. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Certs and Agreements Open Options 1</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nSBA__Certs_And_Agreements_Open_Options_2__c</fullName>
        <description>Certifications and Agreements Open Options. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Certifications and Agreements Open Options. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Certs and Agreements Open Options 2</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nSBA__Change_Will_Promote_Dev_Or_Preserve_Bus__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The change will promote the sound development or preserve the existence of the Applicant business.</description>
        <inlineHelpText>The Change Will Promote Development Or Preserve Existence</inlineHelpText>
        <label>Change Will Promote Dev Or Preserve Bus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__ChangeofOwnership__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>for use in the new ui</description>
        <label>Change Of Ownership</label>
        <referenceTo>nSBA__Change_Of_Ownership__c</referenceTo>
        <relationshipLabel>Application</relationshipLabel>
        <relationshipName>Application</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nSBA__Charge_Was_Single_Misdemeanor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Individual that answered “Yes” has completed an SBA Form 912 AND Delegated Lender has cleared the loan for processing based on SOP 50 10 5 guidelines. (Only delegated lenders have authority to clear a loan for processing under these guidelines.)</description>
        <inlineHelpText>Individual that answered “Yes” has completed an SBA Form 912 AND Delegated Lender has cleared the loan for processing based on SOP 50 10 5 guidelines. (Only delegated lenders have authority to clear a loan for processing under these guidelines.)</inlineHelpText>
        <label>Charge Was Single Misdemeanor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Comm_Prop_Collat_Not_Meet_Env_Reqs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Loan will be collateralized by commercial property that will not meet SBA’s environmental requirements or that will require use of a non-standard indemnification agreement. (Loan is not eligible to be submitted under delegated authority.)</description>
        <inlineHelpText>Commercial Property Collateral Will Not Meet SBA Environmental Requirements</inlineHelpText>
        <label>Comm Prop Collat Not Meet Env Reqs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Community_Advant_Addendum_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the loan is being processed through Community Advantage, SBA Form 2449, Community Advantage Addendum, must be completed and attached to SBA Form 1919, Borrower Information Form.</description>
        <inlineHelpText>If the loan is being processed through Community Advantage, SBA Form 2449, Community Advantage Addendum, must be completed and attached to SBA Form 1919, Borrower Information Form.</inlineHelpText>
        <label>Community Advant Addendum Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Community_Improve_Not_Exceed_SBA_Limit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Community improvements do not exceed 5 percent of the loan amount.</description>
        <inlineHelpText>Community Improvements Do Not Exceed SBA Limit</inlineHelpText>
        <label>Community Improve Not Exceed SBA Limit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Compensation_Limitation_Amount__c</fullName>
        <description>Compensation Limitation Amount (total annual salaries, withdrawals or other forms of remuneration to officers or owners of Borrower and Operating Company, and their immediate family members) that Lender requires Borrower and Operating Company to certify that they will not, without Lender’s prior written consent be paid above.</description>
        <inlineHelpText>Compensation Limitation Amount (total annual salaries, withdrawals or any remuneration to officers or owners of Borrower and OC, and their immediate family members) Borrower and OC to certify that they will not, without Lenders written consent be paid.</inlineHelpText>
        <label>Compensation Limitation Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>